# wminspect

./: .gitignore  BUG_TRIAGE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  MIGRATION_NOTES.md  README.md  RELEASE_NOTES_v0.4.0.md  STEP7_COMPLETION_SUMMARY.md  baseline_report.md  build.rs  docker-compose.yml  release.sh  wminspect.1
.cargo/: config.old  config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
benches/: filter_bench.rs
docs/: architecture.md  dsl.md
scripts/: coverage.sh
sheets/: clean-monitor.rule  hidden-or-unviewable.rule  large-windows.rule  mapped-clients.rule  mapped_only.rule  special-windows.rule
src/: lib.rs  main.rs  wm.rs
src/core/: colorized_output.rs  error.rs  macros.rs  mod.rs  stack_diff.rs  state.rs  tracing.rs  types.rs  wildcard.rs
src/dsl/: filter.rs  mod.rs  presets.rs  sheets.rs
src/platform/: mod.rs  x11.rs
src/ui/: mod.rs
src/wm/: filter.rs  macros.rs  mod.rs  sheets.rs  wm.rs
tests/: integration_test.rs
tests/integration/: cli_tests.rs  mod.rs  x11_tests.rs
tests/unit/: mod.rs  parser_tests.rs  serialization_tests.rs  tokenizer_tests.rs  wildcard_tests.rs
