[package]
name = "wminspect"
version = "0.3.0"
authors = ["Sian Cao <yinshuiboy@gmail.com>"]
links = "xcb"
build = "build.rs"

[dependencies]
libc = "*"
xcb = {version = "0.8.*", features = ["thread"]}
xcb-util = {version = "0.2.*", features = ["ewmh", "keysyms", "icccm", "thread"]}
colored = "1.4"
timer = "*"
crossbeam = "*"
regex = "*"
lazy_static = "*"

serde = "1.0"
erased-serde = "0.3"
serde_derive = "*"
serde_json = "*"
bincode = "*"
clap = "2.27.*"
